# SuperInstance

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SDK.md  BITING_THE_HOOK.md  CATALOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  EDGE_FIRST_ARCHITECTURE.md  KILLER-APPS.md  KILLER_APP.md  NEXT_HORIZONS.md  ONBOARDING.md  PACKAGES.md  PUBLISHING.md  README.md  SECURITY.md  SHIPPING-LOG.md  STATUS_BOARD.md  THE_EGG_AND_THE_ORGANISM.md  THE_HERMIT_CRAB_AND_THE_WORKING_DOG.md  TOPICS.md  VECTOR-INDEX.md  VISION.md  WORKING_ANIMAL_ARCHITECTURE.md  package-lock.json  package.json  pyproject.toml
INDEXES/: CONCEPTS.md  LANGUAGE.md  REALM.md  TOPIC.md  TYPE.md
beta-tests/: SUMMARY.md
conservation-law-rs/: Cargo.toml  README.md
conservation-law-rs/src/: fleet_integration.rs  lib.rs
demo/: README.md  conservation-meter-bridge.ts  demo.ts  harbor-bridge.ts  quickstart.sh
docs/: API_REFERENCE.md  GETTING_STARTED.md  RECIPES.md  SESSION-2026-07-12.md  VISION.md  extracted-patterns-summary.md
examples/: full-fleet-demo.ts
fleet-metrics/: Cargo.toml  README.md
fleet-metrics/reports/: conservation-law-summary-2026-06-15.md  conservation_law_fleet_report_live.md
fleet-metrics/src/: aggregator.rs  lib.rs  main.rs  realtime.rs  reporter.rs  types.rs
integrations/: README.md
message-in-a-bottle/: TASKS.md
recruiting/: NEW-AGENT-PROMPT.md
research/: ARCHAEOLOGY-REPORT.md
schemas/: README.md
sdk/: PRODUCT_SPEC.md  README.md  package-lock.json  package.json  tsconfig.json
superinstance/: __init__.py  agent_cache.py  conservation.py  fleet.py  live.py  (+1 more)
(+92 files in other folders)
