[package]
name = "fleet-metrics"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance <dev@superinstance.ai>"]
description = "Real-time γ + η = C conservation law reporting for agent fleets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/fleet-metrics"

[dependencies]
conservation-law = { path = "../conservation-law-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive", "std", "help"] }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros", "time"] }
hyper = { version = "0.14", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.12"
tracing-subscriber = "0.3"
anyhow = "1.0"
itertools = "0.13"

[dev-dependencies]
test-case = "3.3"
